[package]
name = "negative_scanner"
version = "0.1.0"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = 0

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
opencv = { version = "0.86.1", features = ["clang-runtime"] }
rodio = "0.17.3"
serialport = "4.2.2"
